interim: start adding /api/v2/instance
